[project]
name = "steamvr-bridge"
version = "0.2.0"
description = "Library for accessing motion capture data from SteamVR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "setuptools",
    "numpy",
    "scipy",
    "udpack",
    "loop-rate-limiters",
    "mathutils==3.3.0",
    "openvr",
    "rerun-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steamvr_bridge"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "steamvr_bridge/assets"
